# claude-sync

./: ACTIVATION_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  BOOTSTRAP_SYSTEM_SUMMARY.md  CLAUDE.md  COMPONENT_INTERFACES.md  DATA_FLOW_ARCHITECTURE.md  HOOK_IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_PATTERNS.md  INTEGRATION_TESTING_SUMMARY.md  README.md  REFACTOR_PLAN.md  SYSTEM_ARCHITECTURE.md  activate-agents.sh  activation_manager.py  bootstrap.sh  bootstrap_testing.py  bootstrap_validation.py  claude-hooks-stats  claude-sync-stats  diagnostics_system.py  install-ssh.sh  install.sh  interfaces.py  manual-install.md  one-liner-install.sh  prompt.md  pyproject.toml  update-claude.sh  update.sh
.claude/: settings.json
agents/: bootstrap-engineer.md  code-auditor.md  docs-audience-optimizer.py  docs-completeness-agent.py  docs-editor-agent.py  docs-editor.md  docs-example-validator.py  docs-style-agent.py  docs_intelligence.py  hook-specialist.md  learning-architect.md  project-orchestrator.md  security-specialist.md  system-architect.md  test-specialist.md
backups/: settings_backup_1753863294.json
hooks/: background-sync.py  bash-optimizer-enhanced.py  bash-optimizer.py  context-enhancer.py  docs-agent-orchestrator.py  docs-reviewer.py  intelligent-optimizer-native.py  intelligent-optimizer-original.py  intelligent-optimizer.py  learning-collector.py  process-sync.py  resource-tracker.py  ssh-router-enhanced.py  ssh-router.py  test_hook_performance.py  test_performance.py  validate_interfaces.py
learning/: __init__.py  abstraction.py  (+12 more)
(+29 files in other folders)
