[project]
name = "claude-hooks"
version = "1.0.0"
description = "AI-powered Claude Code hooks with cross-host learning"
authors = [{name = "drejom"}]
dependencies = [
    "cryptography>=41.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
]

[project.scripts]
ssh-router-stats = "hooks.ssh_router_enhanced:stats_main"
bash-optimizer-stats = "hooks.bash_optimizer_enhanced:stats_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hooks", "agents", "learning"]